<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingVertical="18dp"
        android:paddingStart="14dp"
        android:paddingEnd="3dp">

        <TextView
            android:id="@+id/alarm_dialog_alarm_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/alarm_dialog_alarm_title"
            android:textColor="@android:color/white"
            android:textSize="17sp" />

        <ImageButton
            android:id="@+id/alarm_dialog_alarm_exit_button"
            android:layout_width="36dp"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:background="@android:color/transparent"
            android:contentDescription="@string/exit"
            android:src="@drawable/ic_baseline_clear_24"
            android:tint="@android:color/white" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/alarm_dialog_alarm_name_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingHorizontal="20dp"
                android:paddingTop="15dp"
                android:paddingBottom="0dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/alarm_dialog_alarm_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/alarm_dialog_alarm_name_hint"
                    android:maxLength="10" />
            </com.google.android.material.textfield.TextInputLayout>

            <TimePicker
                android:id="@+id/alarm_dialog_time_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="20dp"
                android:timePickerMode="spinner"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/alarm_dialog_alarm_name_layout" />

            <Button
                android:id="@+id/alarm_dialog_save_button"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/save"
                android:textColor="@android:color/white"
                app:layout_constraintHorizontal_bias="0.95"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/alarm_dialog_time_picker" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</LinearLayout>