<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="275dp"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/dialog_header_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:paddingVertical="18dp"
        android:paddingStart="14dp"
        android:paddingEnd="3dp"

        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/alarm_camera_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:padding="20dp"
        android:scaleType="center"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/alarm_delay_button"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_header_layout"
        android:layout_marginTop="10dp"
        app:srcCompat="@drawable/ic_baseline_add_a_photo_72" />

    <ImageButton
        android:id="@+id/alarm_delay_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:padding="20dp"
        android:scaleType="center"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/alarm_camera_button"
        app:layout_constraintTop_toTopOf="@+id/alarm_camera_button"
        app:srcCompat="@drawable/ic_baseline_update_72" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/take_picture"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/alarm_camera_button"
        app:layout_constraintStart_toStartOf="@+id/alarm_camera_button"
        app:layout_constraintTop_toBottomOf="@+id/alarm_camera_button" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="center"
        android:text="@string/delay_alarm"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/alarm_delay_button"
        app:layout_constraintStart_toStartOf="@+id/alarm_delay_button"
        app:layout_constraintTop_toBottomOf="@+id/alarm_delay_button" />

    <Space
        android:layout_width="0dp"
        android:layout_height="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />


</androidx.constraintlayout.widget.ConstraintLayout>