<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/FoodRecommenderCardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="0"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/FoodRecommenderHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="15dp"
            android:text="@string/graph_card_view_title"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/chart"
            android:layout_width="match_parent"
            android:layout_height="300dp" />

        <LinearLayout
            android:id="@+id/addCaloris"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorLine1"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp"
            android:paddingVertical="15dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:src="@drawable/ic_baseline_fastfood_36" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_weight="1"
                android:text="@string/add_caloris"
                android:textSize="21sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:src="@drawable/ic_baseline_chevron_right_24" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/addWeights"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorLine2"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp"
            android:paddingVertical="13dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:src="@drawable/ic_baseline_accessibility_new_36" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_weight="1"
                android:text="@string/add_weights"
                android:textSize="21sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:src="@drawable/ic_baseline_chevron_right_24" />
        </LinearLayout>


    </LinearLayout>


</androidx.cardview.widget.CardView>