<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="275dp"
    android:layout_height="wrap_content"
    android:paddingBottom="5dp">

    <LinearLayout
        android:id="@+id/dialog_header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorLine2Pressed"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingVertical="18dp"
        android:paddingStart="14dp"
        android:paddingEnd="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/dialog_header_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_weights"
            android:textColor="@android:color/white"
            android:textSize="15sp" />

        <ImageButton
            android:id="@+id/dialog_header_exit_button"
            android:layout_width="36dp"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:background="@android:color/transparent"
            android:contentDescription="@string/exit"
            android:src="@drawable/ic_baseline_clear_24"
            android:tint="@android:color/white" />
    </LinearLayout>

    <DatePicker
        android:id="@+id/datePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_header_layout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorLine2Pressed"
        android:paddingHorizontal="20dp"
        android:paddingVertical="0dp"
        app:boxStrokeColor="@color/colorLine2Pressed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/datePicker"
        app:startIconDrawable="@drawable/ic_baseline_accessibility_new_24"
        app:suffixText="Kg">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorLine2Pressed"
            android:maxLength="6"
            android:hint="몸무게를 입력하세요"
            android:inputType="numberDecimal"
            tools:text="66" />

    </com.google.android.material.textfield.TextInputLayout>

    <Space
        android:id="@+id/spacer"
        android:layout_width="wrap_content"
        android:layout_height="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <Button
        android:id="@+id/dialog_save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorLine2"
        android:text="@string/save"
        android:textColor="@android:color/white"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spacer" />

</androidx.constraintlayout.widget.ConstraintLayout>