<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="275dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="5dp">

    <LinearLayout
        android:id="@+id/dialog_header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorLine1Pressed"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingVertical="18dp"
        android:paddingStart="14dp"
        android:paddingEnd="3dp">

        <TextView
            android:id="@+id/dialog_header_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_caloris"
            android:textColor="@android:color/white"
            android:textSize="15sp" />

        <ImageButton
            android:id="@+id/dialog_header_exit_button"
            android:layout_width="36dp"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:background="@android:color/transparent"
            android:contentDescription="@string/exit"
            android:src="@drawable/ic_baseline_clear_24"
            android:tint="@android:color/white" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <DatePicker
                android:id="@+id/datePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/foodSearchLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                android:paddingHorizontal="20dp"
                app:layout_constraintTop_toBottomOf="@+id/datePicker">

                <TextView
                    android:id="@+id/foodName"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:hint="우측 버튼을 눌러 음식을 검색하세요"
                    android:textSize="16sp" />

                <ImageButton
                    android:id="@+id/foodSearchButton"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_weight="0"
                    android:backgroundTint="@color/colorLine1"
                    android:src="@drawable/ic_baseline_search_24"
                    android:tint="@android:color/white" />
            </LinearLayout>

            <EditText
                android:id="@+id/foodCount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:backgroundTint="@color/colorLine1Pressed"
                android:ems="10"
                android:inputType="number"
                android:maxLength="5"
                android:maxLines="1"
                android:text="1"
                android:textAlignment="textEnd"
                app:layout_constraintEnd_toStartOf="@+id/unit"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/foodSearchLayout" />

            <TextView
                android:id="@+id/unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="개"
                app:layout_constraintBottom_toTopOf="@+id/spacer"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/foodCount"
                app:layout_constraintTop_toBottomOf="@+id/foodSearchLayout" />

            <Space
                android:id="@+id/spacer"
                android:layout_width="wrap_content"
                android:layout_height="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/foodCount" />

            <Button
                android:id="@+id/dialog_save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorLine1"
                android:text="@string/save"
                android:textColor="@android:color/white"
                app:layout_constraintHorizontal_bias="0.95"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spacer" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</LinearLayout>